- Ethna_Plugin_Cachemanager に config からデフォルト の namespace を指定可能とした
- Ethna_View_Redirect の挙動変更
-- URLが指定されなかった場合，アプリのURLのトップにリダイレクトする
-- 相対URLが指定された場合は，自分のアプリのURLに結合する
-- 絶対URLが指定された場合，そのURLにリダイレクトする
- PROJECT_DIR/lib/Ethna/extlib/Plugin/Smarty  をデフォルトでSmartyプラグインディレクトリに指定するように，skel に追加
- skeleton 関係
-- デフォルトで生成されるレイアウトテンプレートの調整
-- cssの変更
-- UrlHandler と .htaccess (mod_rewrite) を利用するためのひな形を生成

*** bug fix

- ethna make-plugin-package のデフォルトインストールディレクトリが誤っていたバグを修正
- Ethna_Plugin::includePlugin メソッドの実装が動作するものではなかったので変更
- Ethna_Plugin_Cachemanager のクラスのプロパティに指定する $namespace が意味をなしていなかったので修正 (#17753)
- PROJECT_DIR/lib/Ethna/extlib 以下にファイルを設置するタイプのプラグインを pear-local などでインストールすると、それ以後ethnaコマンドが使えなくなる問題を修正
- 新しいプラグインの命名規則に従っていない古いプラグインを別物として読み込もうとしてクラス名がかぶる問題を修正(#17875) thanks: id:okonomi

** 2.5.0

*** features

- フォーム定義に関する変更
-- フォーム定義を動的に変更するためのAPIをさらに追加
-- Ethna_ActionForm#setFormDef_ViewHelper
- APPID_Controller.php のスケルトンに継承を想定したメソッドを追加
-- skel/app.controller.php _setDefaultTemplateEngin
- add-project 時の www 以下に出来るエントリポイントから APPID_Controller へのパスを相対パスに変更
- ethna コマンドの挙動変更
-- add-project -b オプションの挙動変更
-- ethna help コマンドを追加
-- Filterは一貫してプラグインを使うように変更したため、add-project時の app/filter ディレクトリを削除。
- 指定 Action が存在しない場合、app/action 以下を全て include する仕様を変更
- controller での smarty_xx_plugin の機能を削除
-- フォームヘルパのテキストエリアに value 属性を付加していた動きを修正。(thanks: syachi5150)
---  http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16326
-- [Breaking B.C] ルールがユーザにとって直感的ではないとの理由から、フォーム定義の max と フォームヘルパの maxlength の連携機能を削除 (thanks: syachi5150)
--- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16325
-- Windowsユーザへの便宜のため、zipアーカイブで成果物を配布するオプションを追加
- 組み込みの Smarty プラグインの追加
--- modifier_explode (文字列を，ある文字で分割して配列に変換する）
- 国際化に関する変更
-- デフォルトのタイムゾーンとして、date.timezone を 'Asia/Tokyo' に設定
-- Ethna_I18N クラス に setTimeZone メソッドを追加 (static呼出)
- Ethna_MailSender にて、メール送信に問題がある場合の設定として 'mail_func_workaround' を追加
-- この値を true に設定すると、メールヘッダの改行コードを一律 CRLF にする処理を回避する